# TrenchBroom

./: CMakeLists.txt  README.md
app/DumpShortcuts/: CMakeLists.txt
app/TrenchBroom/: CMakeLists.txt
app/TrenchBroom/cmake/: CopyRuntimeDependencies.cmake  GenerateManual.cmake
app/TrenchBroom/resources/documentation/: generate_spline_tool_pdf.py
lib/TbMdlLib/: CMakeLists.txt
lib/TbMdlLib/include/mdl/: Spline.h  SplineBrushes.h  SplineEntity.h
lib/TbMdlLib/src/: EditorContext.cpp  Spline.cpp  SplineBrushes.cpp  SplineEntity.cpp
lib/TbMdlLib/test/: CMakeLists.txt
lib/TbMdlLib/test/src/: tst_EditorContext.cpp  tst_Spline.cpp  tst_SplineBrushes.cpp  tst_SplineEntity.cpp
lib/TbPreferencesLib/include/: Preferences.h
lib/TbRenderLib/include/render/: PointHandleRenderer.h  RenderService.h
lib/TbRenderLib/src/: PointHandleRenderer.cpp  RenderService.cpp
lib/TbUiLib/: CMakeLists.txt
lib/TbUiLib/include/ui/: ActionContext.h  MapViewBase.h  MapViewToolBox.h  SplineTool.h  SplineToolController.h  SplineToolPage.h
lib/TbUiLib/src/: ActionContext.cpp  ActionManager.cpp  MapView2D.cpp  MapView3D.cpp  MapViewBase.cpp  MapViewToolBox.cpp  SplineTool.cpp  SplineToolController.cpp  SplineToolPage.cpp
tcsg/: CloudInstance.cs  CustomOverlay.cs  FlyMove.cs  GameNetwork.cs  MapFile.cs  ModelBrush.cs  Player.cs  ResizeHandle.cs  ScriptedEntity.cs  UndoSystem.cs  togethercsg.csproj
tcsg/Components/Lighting/: SHLightProbe.cs  SHLightVolume.cs  SHVolumeSystem.cs
tcsg/LibCSG/: AABB.cs  Build2DFaces.cs  CSGBrush.cs  CSGBrushOperation.cs  ConvexBrush.cs  MeshMerge.cs  PlaneCSG.cs  PolygonMeshBridge.cs  SortArray.cs  Transform_to_2DFace.cs
tcsg/Properties/: launchSettings.json
tcsg/UI/: CloudDialog.razor  CloudDialog.razor.scss  FilePickerDialog.razor  FilePickerDialog.razor.scss  Toolbar.razor  Toolbar.razor.scss
